libraries/ckit/regression/valid-programs/a3.c
main () {
  int j;
  j = sizeof(5);
  {
  }
}
