libraries/ckit/regression/invalid-programs/r6.c
main () {

  const int j;
  j = 5;
}
